Версия 10.11 десктоп и модальное окно

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MQ diploma</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css\style.css">
 </head>
 <body>
     <header class="header">
         <section class="header__section">
           <div class="header__logo">
-            <img src="https://netology-code.github.io/html-2-diploma/sources/images/noemi-logo.svg" alt="Логотип">
+            <img src="svg/noemi-logo.svg" alt="Логотип">
           </div>
           <nav class="header__nav">
             <ul class="header__menu">
@@ -89,7 +89,7 @@
         <main class="blog__container">
           <section class="blog__section">
             <figure class="blog__section-image">
-              <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post1.jpg" alt="Берег моря на рассвете">
+              <img src="img/last-post1.jpg" alt="Берег моря на рассвете">
             </figure>
             <article class="blog__article">
               <ul class="article__header">
@@ -108,7 +108,7 @@
           </section>
           <section class="blog__section">
             <figure class="blog__section-image">
-              <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post2.jpg" alt="Ассана йоги">
+              <img src="img/last-post2.jpg" alt="Ассана йоги">
             </figure>
             <article class="blog__article">
               <div class="article__header">
@@ -127,7 +127,7 @@
           </section>
           <section class="blog__section">
             <figure class="blog__section-image">
-              <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post3.jpg" alt="Музыкальные фестивали">
+              <img src="img/last-post3.jpg" alt="Музыкальные фестивали">
             </figure>
             <article class="blog__article">
               <div class="article__header">
@@ -146,7 +146,7 @@
           </section>
           <section class="blog__section">
             <figure class="blog__section-image">
-              <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post4.jpg" alt="Подход к кулинарии">
+              <img src="img/last-post4.jpg" alt="Подход к кулинарии">
             </figure>
             <article class="blog__article">
               <div class="article__header">
@@ -165,7 +165,7 @@
           </section>
           <section class="blog__section">
             <figure class="blog__section-image">
-              <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post5.jpg" alt="Принты на подушках">
+              <img src="img/last-post5.jpg" alt="Принты на подушках">
             </figure>
             <article class="blog__article">
               <div class="article__header">
@@ -191,7 +191,7 @@
             <h3 class="aside__title">Новые посты</h3>
             <article class="aside__post">
               <figure class="aside__post-image">
-                <img src="https://netology-code.github.io/html-2-diploma/sources/images/2.jpg" alt="10 мест">
+                <img src="img/2.jpg" alt="10 мест">
               </figure>
               <div class="aside__post-content">
                 <data class="aside__post-data" value="2019.06.14">14 июня 2019</data>
@@ -200,7 +200,7 @@
             </article>
             <article class="aside__post">
               <figure class="aside__post-image">
-                <img src="https://netology-code.github.io/html-2-diploma/sources/images/7.jpg" alt="Домашняя йога">
+                <img src="img/7.jpg" alt="Домашняя йога">
               </figure>
               <div class="aside__post-content">
                 <data class="aside__post-data" value="2019.06.14">14 июня 2019</data>
@@ -209,7 +209,7 @@
             </article>
             <article class="aside__post">
               <figure class="aside__post-image">
-                <img src="https://netology-code.github.io/html-2-diploma/sources/images/45.jpg" alt="Классное место">
+                <img src="img/45.jpg" alt="Классное место">
               </figure>
               <div class="aside__post-content">
                 <data class="aside__post-data" value="2019.06.14">14 июня 2019</data>
@@ -218,7 +218,7 @@
             </article>
             <article class="aside__post">
               <figure class="aside__post-image">
-                <img src="https://netology-code.github.io/html-2-diploma/sources/images/151.jpg" alt="Кулинарный подход">
+                <img src="img/151.jpg" alt="Кулинарный подход">
               </figure>
               <div class="aside__post-content">
                 <data class="aside__post-data" value="2019.06.14">14 июня 2019</data>
@@ -227,7 +227,7 @@
             </article>
             <article class="aside__post">
               <figure class="aside__post-image">
-                <img src="https://netology-code.github.io/html-2-diploma/sources/images/501.jpg" alt="Лучшие прически">
+                <img src="img/501.jpg" alt="Лучшие прически">
               </figure>
               <div class="aside__post-content">
                 <data class="aside__post-data" value="2019.06.14">14 июня 2019</data>
@@ -279,9 +279,9 @@
           </div>
           <section class="product__cards">
             <div class="product__card">
-              <figure class="product__img">
-                <img src="#" alt="" class="card__img">
-              </figure>
+              <div class="product__img card__img1">
+                <span class="visualy-hidden">Подушки на диван</span>
+              </div>
               <article class="product__source">
                 <div class="card__title">
                   <h2 class="product__title">Подушки на диван</h2>
@@ -303,9 +303,9 @@
               </article>
             </div>
             <div class="product__card">
-              <figure class="product__img">
-                <img src="#" alt="" class="card__img">
-              </figure>
+              <div class="product__img card__img2">
+                <span class="visualy-hidden">Кукла "Зайчик"</span>
+              </div>
               <article class="product__source">
                 <div class="card__title">
                   <h2 class="product__title">Кукла "Зайчик"</h2>
@@ -327,9 +327,9 @@
               </article>
             </div>
             <div class="product__card">
-              <figure class="product__img">
-                <img src="#" alt="" class="card__img">
-              </figure>
+              <div class="product__img card__img3">
+                <span class="visualy-hidden">Шестиугольная рамка</span>
+              </div>
               <article class="product__source">
                 <div class="card__title">
                   <h2 class="product__title">Шестиугольная рамка</h2>
@@ -376,5 +376,30 @@
           <span>Copyright &copy; 2009 - 2019 City Blog LLC.</span>
         </div>
       </footer>
+      
+  <section class="banner">
+    <div class="banner__form">
+      <div class="shop__title">
+        <h3 class="in__trends__title">Ваш фидбек</h3>
+      </div>
+      <form></form>
+        <span class="banner__title">Как часто вы заходите на сайт?</span>
+        <select name="quantity" class="banner__quantity">
+          <option class="quantity__option">Почти каждый день</option>
+          <option class="quantity__option">Раз в несколько дней</option>
+          <option class="quantity__option">Раз в несколько недель</option>
+          <option class="quantity__option">Несколько раз в году</option>
+        </select>
+        <span class="banner__title">Вы подписаны на email рассылку?</span>
+        <ul class="banner__radio">
+          <li><input type="radio" class="radio__list" name="mailing" value="Yes">Да</li>
+          <li><input type="radio" class="radio__list" name="mailing" value="No">Нет</li>
+        </ul>
+        <span class="textarea__title">Расскажите, какой контент вы хотели бы видеть на нашем сайте?</span>
+        <textarea name="" class="banner__textarea" cols="30" rows="10" placeholder="Может, больше рецептов?"></textarea>
+        <input type="submit" class="banner__submit button" value="Отправить">
+      </form>
+    </div>
+  </section>
 </body>
 </html>
