--- a/index.html
+++ b/index.html
@@ -247,9 +247,7 @@
               <label>
                 <input class="input-email input" type="email" placeholder="Ваш email адрес"><span class="visualy-hidden">email</span>
               </label>
-              <label>
-                <button class="input-submit button">Отправить</button><span class="visualy-hidden">email button</span>
-              </label>
+              <button class="input-submit button">Отправить<span class="visualy-hidden">email button</span></button>
             </form>
           </section>
           <section class="blog__item">
@@ -269,12 +267,12 @@
           <section class="blog__item">
             <h3 class="aside__title">Темы</h3>
             <ul class="aside__topics">
-              <li class="topics-row"><a class="topics-link aside__link" href="#"><span>Красота<span class="aside__topics-index">12</span></span></a></li>
-              <li class="topics-row"><a class="topics-link aside__link" href="#"><span>Здоровье<span class="aside__topics-index">4</span></span></a></li>
-              <li class="topics-row"><a class="topics-link aside__link" href="#"><span>Образ жизни<span class="aside__topics-index">145</span></span></a></li>
-              <li class="topics-row"><a class="topics-link aside__link" href="#"><span>Музыка<span class="aside__topics-index">28</span></span></a></li>
-              <li class="topics-row"><a class="topics-link aside__link" href="#"><span>Спорт<span class="aside__topics-index">62</span></span></a></li>
-              <li class="topics-row"><a class="topics-link aside__link" href="#"><span>Йога<span class="aside__topics-index">8</span></span></a></li>
+              <li class="topics-row"><a class="topics-link aside__link" href="#">Красота</a><span class="aside__topics-index">12</span></li>
+              <li class="topics-row"><a class="topics-link aside__link" href="#">Здоровье</a><span class="aside__topics-index">4</span></li>
+              <li class="topics-row"><a class="topics-link aside__link" href="#">Образ жизни</a><span class="aside__topics-index">145</span></li>
+              <li class="topics-row"><a class="topics-link aside__link" href="#">Музыка</a><span class="aside__topics-index">28</span></li>
+              <li class="topics-row"><a class="topics-link aside__link" href="#">Спорт</a><span class="aside__topics-index">62</span></li>
+              <li class="topics-row"><a class="topics-link aside__link" href="#">Йога</a><span class="aside__topics-index">8</span></li>
             </ul>
           </section>
         </aside>
@@ -313,7 +311,7 @@
             <div class="product__card">
               <picture class="product__img">
                 <source media="(max-width: 360px)" srcset="img/shop-item-mobile2.jpg">
-                <source media="(min-width: 767px)" srcset="img/shop-item-tablet2.jpg">
+                <source media="(max-width: 767px)" srcset="img/shop-item-tablet2.jpg">
                 <img src="img/shop-item-desk2.jpg" alt="Игрушка Зайчик">
               </picture>
               <article class="product__source">
@@ -337,9 +335,9 @@
               </article>
             </div>
             <div class="product__card">
-              <picture>
+              <picture class="product__img">
                 <source media="(max-width: 360px)" srcset="img/shop-item-mobile3.jpg">
-                <source media="(min-width: 767px)" srcset="img/shop-item-tablet3.jpg">
+                <source media="(max-width: 767px)" srcset="img/shop-item-tablet3.jpg">
                 <img src="img/shop-item-desk3.jpg" alt="Шестиугольная рамка">
               </picture>
               <article class="product__source">
