--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
           <section class="product__cards">
             <div class="product__card">
               <picture class="product__img">
-                <source media="(max-width: 360px)" srcset="img/shop-item-mobile1.jpg">
-                <source media="(max-width: 767px)" srcset="img/shop-item-tablet1.jpg">
-                <img src="img/shop-item-desk1.jpg" alt="Подушка на диван">
+                <source media="(max-width: 360px)" class="img__mobile" srcset="img/shop-item-mobile1.jpg">
+                <source media="(max-width: 767px)" class="img__tablet" srcset="img/shop-item-tablet1.jpg">
+                <img src="img/shop-item-desk1.jpg" class="img__desk" alt="Подушка на диван">
               </picture>
               <article class="product__source">
                 <div class="card__title">
@@ -310,9 +310,9 @@
             </div>
             <div class="product__card">
               <picture class="product__img">
-                <source media="(max-width: 360px)" srcset="img/shop-item-mobile2.jpg">
-                <source media="(max-width: 767px)" srcset="img/shop-item-tablet2.jpg">
-                <img src="img/shop-item-desk2.jpg" alt="Игрушка Зайчик">
+                <source media="(max-width: 360px)" class="img__mobile" srcset="img/shop-item-mobile2.jpg">
+                <source media="(max-width: 767px)" class="img__tablet" srcset="img/shop-item-tablet2.jpg">
+                <img src="img/shop-item-desk2.jpg" class="img__desk" alt="Игрушка Зайчик">
               </picture>
               <article class="product__source">
                 <div class="card__title">
@@ -336,9 +336,9 @@
             </div>
             <div class="product__card">
               <picture class="product__img">
-                <source media="(max-width: 360px)" srcset="img/shop-item-mobile3.jpg">
-                <source media="(max-width: 767px)" srcset="img/shop-item-tablet3.jpg">
-                <img src="img/shop-item-desk3.jpg" alt="Шестиугольная рамка">
+                <source media="(max-width: 360px)" class="img__mobile" srcset="img/shop-item-mobile3.jpg">
+                <source media="(max-width: 767px)" class="img__tablet" srcset="img/shop-item-tablet3.jpg">
+                <img src="img/shop-item-desk3.jpg" class="img__desk" alt="Шестиугольная рамка">
               </picture>
               <article class="product__source">
                 <div class="card__title">
